<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.leonardo.calculadoracerveja.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img1"
            android:layout_marginTop="50dp"
            android:layout_width="148dp"
            android:layout_height="148dp"
            android:contentDescription="@string/ceva1"
            android:maxHeight="25dp"
            android:maxWidth="25dp"
            app:srcCompat="@drawable/cevas" />

        <LinearLayout
            android:layout_width="237dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCeva1"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.63"
                android:text="@string/cerveja"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etPreco1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/preco"
                android:inputType="number|numberDecimal"
                android:labelFor="@+id/etMl1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etMl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.63"
                android:ems="10"
                android:hint="@string/mls"
                android:labelFor="@+id/Preco1"
                android:textSize="20sp"
                android:inputType="number|numberDecimal"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img2"
            android:layout_width="148dp"
            android:layout_height="148dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/ceva2"
            android:maxHeight="25dp"
            android:maxWidth="25dp"
            app:srcCompat="@drawable/cevas" />

        <LinearLayout
            android:layout_width="237dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCeva2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_weight="0.63"
                android:text="@string/cerveja2"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/etPreco2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/preco"
                android:labelFor="@+id/etMl2"
                android:textSize="20sp"
                android:inputType="number|numberDecimal"/>

            <EditText
                android:id="@+id/etMl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.63"
                android:ems="10"
                android:hint="@string/mls"
                android:labelFor="@id/etPreco2"
                android:textSize="20sp"
                android:inputType="number|numberDecimal"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:onClick="resposta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btn" />

</LinearLayout>
